---------------------------------------------------------------------------
Version 0.9.7 (RGer), 2005-08-15
- some of the previous doc files (like INSTALL) did not properly
  reflect the changes to the build process and the new doc. Fixed
  that.
---------------------------------------------------------------------------
Version 0.9.6 (RGer), 2005-08-09
- greatly enhanced documentation. Now available in html format in
  the "doc" folder and FreeBSD. Finally includes an install howto.
- improved MySQL error messages a little - they now show up as log
  messages, too (formerly only in debug mode)
- added the ability to specify the listen port for udp syslog.
  WARNING: This introduces an incompatibility. Formerly, udp
  syslog was enabled by the -r command line option. Now, it is
  "-r [port]", which is consistent with the tcp listener. However,
  just -r will now return an error message.
- added sample startup scripts for Debian and FreeBSD
- added support for easy feature selection in the makefile. Un-
  fortunately, this also means I needed to spilt the make file
  for different OS and distros. There are some really bad syntax
  differences between FreeBSD and Linux make.
---------------------------------------------------------------------------
Version 0.9.5 (RGer), 2005-08-01
- the "semicolon bug" was actually not (fully) solved in 0.9.4. One
  part of the bug was solved, but another still existed. This one
  is fixed now, too.
- the "semicolon bug" actually turned out to be a more generic bug.
  It appeared whenever an invalid template name was given. With some
  selector actions, rsyslogd dumped core, with other it "just" had
  a small ressource leak with others all worked well. These anomalies
  are now fixed. Note that they only appeared during system initaliziation
  once the system was running, nothing bad happened.
- improved error reporting for template errors on startup. They are now